<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@mipmap/shouye1"
            android:title="@string/shouye"/>
        <item
            android:id="@+id/nav_gallery"
            android:icon="@mipmap/xinggan1"
            android:title="@string/xinggan"/>
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@mipmap/qingchun1"
            android:title="@string/qingchun"/>
        <item
        android:id="@+id/nav_manage"
        android:icon="@mipmap/mingxing"
        android:title="@string/mingxin"/>
        <item
            android:id="@+id/nav_manage2"
            android:icon="@mipmap/xiaohua"
            android:title="@string/xiaohua"/>
    </group>

    <!--<item android:title="Communicate">-->
        <!--<menu>-->
            <!--<item-->
                <!--android:id="@+id/nav_share"-->
                <!--android:icon="@drawable/ic_menu_share"-->
                <!--android:title="Share"/>-->
            <!--<item-->
                <!--android:id="@+id/nav_send"-->
                <!--android:icon="@drawable/ic_menu_send"-->
                <!--android:title="Send"/>-->
        <!--</menu>-->
    <!--</item>-->

</menu>
